# MarsRoverProject

./: ESP32_to_ARDUINO_pins.txt  platformio.ini
Communications/src/: communication.cpp  instructions.cpp  main.cpp
IGNORE/: something.cpp
ITSABOUTDRIVE/motorcontrol/test/: test.ino
Optics_and_motor/: CMakeLists.txt  Setup.md  compile_upload_run.sh
Optics_and_motor/include/esp32-2.0.3/: platform.txt
Optics_and_motor/lib/RoboJax/: Robojax_L298N_DC_motor.cpp
Optics_and_motor/lib/esp32-2.0.3/tools/sdk/esp32/include/freertos/port/xtensa/include/freertos/: FreeRTOSConfig_arch 2.h  xtensa_config 2.h
Optics_and_motor/src/: motor_control.cpp  optics.cpp
VisionTesting/: EEE_IMGPROC.v  main.c  test.v
VisionTesting/DE10_LITE_D8M_VIP_16/: DE10_LITE_D8M_VIP.qsf  Qsys.sopcinfo
VisionTesting/DE10_LITE_D8M_VIP_16/.qsys_edit/: preferences.xml
VisionTesting/DE10_LITE_D8M_VIP_16/db/: .DE10_LITE_D8M_VIP.cmp.cdb.icloud  .cmp.kpt  (+953 more)
frontend/: package-lock.json
frontend/views/: control.html  data.ejs  group.html  index.css  index.html  mywebserver.js  package.json
include/: communication.hpp  gyro.hpp  instructions.hpp  motor.h  optics.h  sonic.hpp
optics/include/: motor.hpp
requests/: create_database.php  db_connect.php  get_instruction.php  jsonphp.php  post_instruction.php  put_alien_location.php  put_building_location.php  put_sensor_data.php  test.php
rover_controller/src/: main.cpp
setup/: required_parts.sh
src/: communication.cpp  gyroscope.cpp  instructions.cpp  main.cpp  motor_control.cpp  optics.cpp  optics_control.cpp  sonic.cpp
(+75 files in other folders)
